--- a/client/stylesheet.css
+++ b/client/stylesheet.css
@@ -1,16 +1,25 @@
-
+html * 
+{
+    font-family: Arial, Helvetica, sans-serif;
+}
 #pseudo {
     background-color: lightblue;
+    border-radius: 5px;
+    padding: 5px;
 }
 #liste-mesage{
     display: flex;
+    max-height: 750px;
 }
 #message{
     background-color: white;
 }
 
 #entree-message {
+    padding: 10px;
+    display: flex;
     background-color: lightgray;
+    align-items: center;
 }
 
 .vl{
@@ -18,4 +27,17 @@
     height: 500px;
     margin-left:5px;
     margin-right:5px;
+}
+
+.color-gray{
+    color: gray;
+}
+
+.border-radius-5{
+    border-radius: 5px;
+    border: 1px solid;
+}
+
+.fed {
+    align-items: center;
 }
