--- a/client/stylesheet.css
+++ b/client/stylesheet.css
@@ -7,22 +7,26 @@ html *
     border-radius: 5px;
     padding: 5px;
 }
-#liste-mesage{
-    display: flex;
-    max-height: 750px;
+#message-list{
+    /* max-height: 500px; */
+    overflow-y: scroll;
+    background-color: antiquewhite;
 }
 #message{
     background-color: white;
 }
 
 #entree-message {
+    margin-top: auto;
     padding: 10px;
-    display: flex;
+    position: fixed;
+    bottom: 0%;
+    width: 100%;
     background-color: lightgray;
     align-items: center;
 }
 
-.vl{
+.vertical-line{
     border-left: 2px solid gray;
     height: 500px;
     margin-left:5px;
@@ -38,6 +42,11 @@ html *
     border: 1px solid;
 }
 
-.fed {
-    align-items: center;
+.btn-border-radius-hover-scale{
+    border-radius: 5px;
+    transition: scale 0.2s ;
+}
+
+.btn-border-radius-hover-scale:hover{
+    scale: 1.2;
 }
