--- a/client/stylesheet.css
+++ b/client/stylesheet.css
@@ -10,7 +10,7 @@ html *
 #message-list{
     /* max-height: 500px; */
     overflow-y: scroll;
-    background-color: antiquewhite;
+    background-color: rgb(244, 244, 244);
 }
 #message{
     background-color: white;
