--- a/client/stylesheet.css
+++ b/client/stylesheet.css
@@ -1,52 +1,56 @@
-html * 
-{
-    font-family: Arial, Helvetica, sans-serif;
+html * {
+  font-family: Arial, Helvetica, sans-serif;
 }
 #pseudo {
-    background-color: lightblue;
-    border-radius: 5px;
-    padding: 5px;
+  background-color: lightblue;
+  position: sticky;
+  top: 0%;
+  width: 100%;
+  border-radius: 5px;
+  padding: 5px;
 }
-#message-list{
-    /* max-height: 500px; */
-    overflow-y: scroll;
-    background-color: rgb(244, 244, 244);
+#message-list {
+  max-height: 540px;
+  overflow-y: scroll;
+  background-color: rgb(244, 244, 244);
+  display: flex;
+  flex-direction: column;
 }
-#message{
-    background-color: white;
+#message {
+  background-color: white;
 }
 
 #entree-message {
-    margin-top: auto;
-    padding: 10px;
-    position: fixed;
-    bottom: 0%;
-    width: 100%;
-    background-color: lightgray;
-    align-items: center;
+  margin-top: auto;
+  padding: 10px;
+  position: sticky;
+  bottom: 0%;
+  width: 100%;
+  background-color: lightgray;
+  align-items: center;
 }
 
-.vertical-line{
-    border-left: 2px solid gray;
-    height: 500px;
-    margin-left:5px;
-    margin-right:5px;
+.vertical-line {
+  border-left: 2px solid gray;
+  height: 500px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-.color-gray{
-    color: gray;
+.color-gray {
+  color: gray;
 }
 
-.border-radius-5{
-    border-radius: 5px;
-    border: 1px solid;
+.border-radius-5 {
+  border-radius: 5px;
+  border: 1px solid;
 }
 
-.btn-border-radius-hover-scale{
-    border-radius: 5px;
-    transition: scale 0.2s ;
+.btn-border-radius-hover-scale {
+  border-radius: 5px;
+  transition: scale 0.2s;
 }
 
-.btn-border-radius-hover-scale:hover{
-    scale: 1.2;
+.btn-border-radius-hover-scale:hover {
+  scale: 1.2;
 }
